[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Licitar.gd" type="Script" id=1]
[ext_resource path="res://Assets/licitar_a.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sfx/collect_a.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 4.5 )

[node name="LicitarA" type="Area2D" groups=["LicitarA"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Licitar_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
