[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/licitar_c.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Licitar.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 13.0

[node name="LicitarC" type="Area2D" groups=["LicitarC"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Licitar_body_entered"]
