[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/star_b.png" type="Texture" id=1]
[ext_resource path="res://Assets/star_a.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Licitar.gd" type="Script" id=3]
[ext_resource path="res://Scenes/LicitarStarSprites.gd" type="Script" id=4]
[ext_resource path="res://Assets/star_c.png" type="Texture" id=5]
[ext_resource path="res://Assets/star_d.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sfx/collect_b.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]

[node name="LicitarStar" type="Area2D" groups=["Despawn", "LicitarStar"]]
script = ExtResource( 3 )

[node name="LicitarStarSprites" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="StarA" type="Sprite" parent="LicitarStarSprites"]
visible = false
position = Vector2( 0.5, 0 )
texture = ExtResource( 2 )

[node name="StarB" type="Sprite" parent="LicitarStarSprites"]
visible = false
position = Vector2( 0.5, 0 )
texture = ExtResource( 1 )

[node name="StarC" type="Sprite" parent="LicitarStarSprites"]
texture = ExtResource( 5 )

[node name="StarD" type="Sprite" parent="LicitarStarSprites"]
visible = false
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="." to="." method="_on_Licitar_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
